----------------------- 3.7.169 Release [26-April-2017] -----------------------

26-April-2017
  # JRequest deprecated (build 169)


----------------------- 3.6.168 Release [25-April-2017] -----------------------

25-April-2017
  # upload file (build 168)

3-March-2017
  # cpanel.json (build 167)

2-February-2017
  # websites view (build 166)

28-January-2017
  + export modules (build 165)
  + export menus (build 164)

25-January-2017
  + link source file (build 163)
  + backlink (build 163)
  + filename (build 163)

13-January-2017
  + export contacts (build 161)
  + ajax (build 160)
  - 2.5 compatibility (build 160)
  + import Ajax (build 159, 162)
  + PHP Console (build 158)
  + OAuth2 (build 158)

---------------------- 3.6.157 Release [31-October-2016] ----------------------

31-October-2016
  ^ debug (build 157)
  ^ utf8_encode (build 156)

---------------------- 3.3.155 Release [17-October-2016] ----------------------

17-October-2016
  ^ purify xml (build 155)

--------------------- 3.3.154 Release [19-September-2016] ---------------------

19-September-2016
  # messages (build 154)

------------------------ 3.3.153 Release [31-May-2016] ------------------------

31-May-2016
  # log (build 153)

------------------------ 3.3.152 Release [26-May-2016] ------------------------

26-May-2016
  # manifest (build 152)

------------------------ 3.3.151 Release [25-May-2016] ------------------------

25-May-2016
  ! stable release (build 151)

18-May-2016
  ^ user group numeric (build 150)
  + onContentPrepareData (build 150)
  - html for j2xml support (build 150)

12-May-2016
  # installation (build 149)

4-April-2016
  + html for j2xml support (build 148)

----------------------- 3.3.147  Release [3-March-2016] -----------------------

3-March-2016
  # Installation (build 147)
  $ COM_J2XML_FIELD_SERVER_* (build 146)

---------------------- 3.3.145 Release [23-October-2015] ----------------------

23-October-2015
  ^ clean (build 145)
