@@ -1,6 +1,6 @@
 <?php
 /**
- * @version		3.6.161 administrator/components/com_j2xml/views/vebsites/view.html.php
+ * @version		3.7.170 administrator/components/com_j2xml/views/vebsites/view.html.php
  * 
  * @package		J2XML
  * @subpackage	com_j2xml
@@ -54,7 +54,7 @@ class J2XMLViewWebsites extends JViewLegacy
 
 		// Check for errors.
 		if (count($errors = $this->get('Errors'))) {
-			JError::raiseError(500, implode("\n", $errors));
+			throw new Exception(implode("\n", $errors), 500);
 			return false;
 		}
 
